# paprika

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml  unittest.yml  workflow.yml
paprika/: __init__.py  benchmark.py  error_handling.py  oo.py  utility.py
tests/: test_benchmark.py  test_error_handling.py  test_oo.py  test_utility.py
