[tool.poetry]
name = "paprika"
version = "1.1.0"
description = "Paprika is a python library that reduces boilerplate. Heavily inspired by Project Lombok."
authors = ["Rayan Hatout <rayan.hatout@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rayanht/paprika"
repository = "https://github.com/rayanht/paprika"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
